# Clairity-2

./: .env.example  .gitignore  README.md  SYSTEM_OVERVIEW.md  docker-compose.dev.yml  docker-compose.yml  main.py  ppt_template.md  pyproject.toml  test_payload.json
.github/workflows/: ci.yml
analysis/: .dockerignore  Dockerfile  README.md  benchmark_results.txt  benchmark_trends.py  check_actor_name.py  check_schema.py  check_sdk.py  clear_trends.py  debug_db.py  flush_db.py  list_comchat_actors.py  pyproject.toml  run_trends_only.py  run_workflow.py  score_benchmark.py  test_genai_v2.py  test_reddit.py  test_synthetic_trends.py  test_xapi.py  twitter_sample.json  view_final_trends.py
analysis/scripts/: check_env_simple.py  flush_trends.py
analysis/src/: config.py  main.py  scheduler.py  state.py
analysis/src/agents/: evaluator_agent.py  graph.py  ingestion_agent.py  insight_agent.py  preprocessing_agent.py  recommendation_agent.py  sentiment_agent.py  topic_agent.py  trend_agent.py
analysis/src/api/: routes.py
analysis/src/db/: mongo.py  neon.py
analysis/src/ingestion/: reddit.py  twitter.py  youtube.py
analysis/src/llm/: wrapper.py
analysis/src/ml/: anomaly.py  emotions.py  sentiment.py  topics.py  trends.py
analysis/src/processing/: cleaner.py  dedup.py  embeddings.py  normalization.py
analysis/tests/: check_data.py  check_db.py  check_env.py  test_api_distribution.py  test_ingestion_cycle.py  test_semantic_extraction.py  test_twitter_api.py
api/: .dockerignore  .eslintrc.json  Dockerfile  package-lock.json  package.json
api/prisma/: enable_pgvector.sql  schema.prisma
api/src/: index.ts
api/src/middleware/: auth.ts  validation.ts
api/src/routes/: content.ts  dashboard.ts  geo.ts  niches.ts  pipeline.ts  recommendations.ts  seo.ts  trends.ts
api/src/services/: neon.ts  redis.ts  websocket.ts
api/src/types/: index.ts
docs/: 02_agent_architecture.md  03_data_pipeline.md  04_ml_nlp_pipeline.md  05_database_strategy.md  06_recommendation_engine.md  07_frontend_backend.md  08_scalability_cost.md  09_state_schema.md  implementation_plan.md  task.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/content/: page.tsx
frontend/src/components/: AppShell.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: api.ts
nginx/: nginx.conf
scripts/: deploy.sh  setup.sh  standalone_runner.py  verify_ml_agents.py
(+14 files in other folders)
