[project]
name = "market-research-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.4.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "fastapi>=0.128.7",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langdetect>=1.0.9",
    "langgraph>=1.0.8",
    "motor>=3.7.1",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
