[project]
name = "market-research-analysis"
version = "0.1.0"
description = "Python Analysis Service — ML pipelines, LangGraph agents, FastAPI"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # LangChain + LangGraph
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    # ML/NLP
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "sentence-transformers>=3.4.0",
    "bertopic>=0.16.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "motor>=3.6.0",
    # Data ingestion
    "apify-client>=1.8.0",
    "httpx>=0.28.0",
    "google-api-python-client>=2.160.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "beautifulsoup4>=4.12.0",
    "keybert>=0.9.0",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
